fix div z-index bug

--- a/src/UI/Notification.module.css
+++ b/src/UI/Notification.module.css
@@ -11,7 +11,6 @@
     color: white;
     padding: 0.5rem 10%;
     box-shadow: 0 -3px 6px rgba(0, 0, 0, 0.2);
-    margin-bottom: 25px;
 }
 
 .notification h2 {
