--- a/src/UI/Timer.module.css
+++ b/src/UI/Timer.module.css
@@ -1,7 +1,6 @@
 .timer {
     text-align: center;
     font-size: 15px;
-    z-index: 2;
 }
 
 .modal{
