--- a/src/components/Navbar.module.css
+++ b/src/components/Navbar.module.css
@@ -38,3 +38,9 @@
 .options a{
     margin: 0 10px;
 }
+
+.field-count{
+    color: white;
+    font-family: Montserrat, serif;
+    font-weight: 500;
+}
