--- a/src/components/loader.module.css
+++ b/src/components/loader.module.css
@@ -7,4 +7,5 @@
     align-items: center;
     background-color: #282828b5;
     top: 0;
+    z-index: 3;
 }
