--- a/styles/globals.css
+++ b/styles/globals.css
@@ -21,6 +21,7 @@ a {
     justify-content: center;
     align-items: center;
     height: 100vh;
+    z-index: 5;
 }
 
 .loader {
@@ -30,6 +31,7 @@ a {
     width: 120px;
     height: 120px;
     animation: spin 2s linear infinite;
+    z-index: 5;
 }
 
 @keyframes spin {
